# HydraUniversal

./: .gitignore  .replit  README.md  awardsconfig.json  main.py  mediaconfig.json  polls.json  pyproject.toml  securitysetup.json  test_logging.py  verification_config.json
attached_assets/: Pasted-025-07-29-07-08-17-429-bot-ERROR-Bot-CFFL-Utilities-failed-to-load-cog-cogs-scorereportcommand-1753772931015_1753772931015.txt  Pasted-2025-07-23-05-45-23-116-bot-INFO-App-command-lfp-invoked-by-thezypherious-2025-07-23-05-45-1753249540592_1753249540599.txt  Pasted-2025-07-25-04-03-17-639-bot-ERROR-Bot-Hydra-Bot-failed-to-load-cog-cogs-scorereportcommands-E-1753416351479_1753416351480.txt
cogs/: applications.py  appointment_commands.py  awardcommands.py  betting.py  folist.py  freeagency.py  fun.py  game_commands.py  general_commands.py  giveaways.py  goldsecuritycog.py  mediacommands.py  moderation_commands.py  promotioncommands.py  roster_commands.py  schedule_commands.py  scorereportcommands.py  self_edit.py  setupcommands.py  signing_commands.py  silversecurity.py  spamcommands.py  stats.py  suspension_commands.py  tickets.py  trade_commands.py  verification.py
data/: 7v7_de_stats.json  applications.json  appointments.json  balances.json  cb_stats.json  command_counter.json  feedback.json  games.json  guilds.json  mutes.json  offers.json  qb_stats.json  self_edit.json  serverconfig.json  signs.json  suspensions.json  tickets.json  transactions_history.json  warnings.json  wr_stats.json
utils/: config.py  embeds.py  logging.py  permissions.py  scheduler.py  sheets.py  (+2 more)
